# TDD_Data

./: README.md
constraint/greatgramma-main/: LICENSE  README.md  pyproject.toml  requirements.txt
constraint/greatgramma-main/alignment.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
constraint/greatgramma-main/alignment/generation/: configuration_utils.py
constraint/greatgramma-main/alignment/models/: tokenizer.py  transformers.py
constraint/greatgramma-main/alignment/monitor/: adaptive_utils.py  monitor.py
constraint/greatgramma-main/alignment/monitor/grammar/: __init__.py  cfg_monitor.py  llguidance_monitor.py  partial_lexer.pyx  partial_parser.pyx
constraint/greatgramma-main/examples/: asap.py  mcmc.py  test_gcd.py
constraint/greatgramma-main/tests/monitor/grammar/: test_cfg_monitor.py  test_partial_lexer.py
experiment/: COMPLETION_REPORT.md  FILE_INDEX.md  PROJECT_DOCUMENTATION.md  QUICK_START.md  compare_results.py  grammar_constrained_decoding.py  process_complete_dataset.py  python_grammar.lark  run_full_experiment.py
experiment/result_comp/: experiment_summary.json  json_schema_outlines.json  processed_samples.json
experiment/results/: experiment_summary.json  json_schema_outlines.json  processed_samples.json
